--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <header class="cabecalho">
             <nav>
                 <ul class="menu__lista">
-                    <li class="menu__item"><a href="#" class="menu__link">Sobre</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">Palestrantes</a></li>
+                    <li class="menu__item"><a href="#secao-about" class="menu__link">Sobre</a></li>
+                    <li class="menu__item"><a href="#secao-palestrantes" class="menu__link">Palestrantes</a></li>
                 </ul>
             </nav>
             <div class="jumbotron">
@@ -25,7 +25,7 @@
                     <p class="chamada__subtitle">30Maio|Rio</p>
                 </section>
                 <section class="container">
-                    <a href="#" class="chamada__button">Inscreva-se</a>
+                    <a href="#secao-formulario" class="chamada__button">Inscreva-se</a>
                 </section>
             </div>
         </header>
