--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Aluraconf</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/about.css">
-    <link rel="stylesheet" href="css/speakers.css">
+    <link rel="stylesheet" href="css/palestrantes.css">
     <link rel="stylesheet" href="css/form.css">
 </head>
 
