--- a/index.html
+++ b/index.html
@@ -1,139 +1,142 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Aluraconf</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/about.css">
-    <link rel="stylesheet" href="css/speakers.css">
-    <link rel="stylesheet" href="css/form.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
 
-<body>
-    <header class="header">
-        <nav class="main-menu">
-            <ul>
-                <li class="menu-item"><a href="#panel-about">Sobre</a></li>
-                <li class="menu-item"><a href="#panel-speakers">Palestrantes</a></li>
-            </ul>
-        </nav>
-        <div class="jumbotron">
-            <section class="panel-main">
-                <h1 class="title">ALURACONF</h1>
-                <h2 class="subtitle">30MAIO|RIO</h2>
-            </section>
-            <section class="panel-subscribe">
-                <a href="#panel-form" class="button">Inscreva-se</a>
-            </section>
-        </div>
-    </header>
+        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/base.css">
+        <link rel="stylesheet" href="css/cabecalho.css">
+        <link rel="stylesheet" href="css/chamada.css">
+        <link rel="stylesheet" href="css/palestrantes.css">
+        <link rel="stylesheet" href="css/formulario.css">
 
-    <section id="panel-about" class="panel panel-about">
-        <div class="container">
-            <h2 class="title">Muito conteúdo: do frontend ao backend</h2>
-            <h3 class="subtitle">30 de Maio de 2017 - na Cidade Maravilhosa</h3>
+        <title>AluraConf</title>
+    </head>
 
-            <div class="about-description">
-                <p>
-                    Com a AluraConf abordaremos o que há de novidade e conhecimentos essenciais a um desenvolver mobile.
-                </p>
-                <p>
-                    É uma grande chance de ficar por dentro dos assuntos de Android, iOS, Web mobile, desenvolvimento híbrido, UX, além da parte
-                    backend com Rest, Microservices, e BigData. O desenvolvedor atualizado vai estar aqui.
-                </p>
+    <body>
+        <header class="cabecalho">
+            <nav class="cabecalho-menu">
+                <ul>
+                    <li class="menu-item"><a href="#secao-chamada">Sobre</a></li>
+                    <li class="menu-item"><a href="#secao-palestrantes">Palestrantes</a></li>
+                </ul>
+            </nav>
+            <div class="jumbotron">
+                <section class="cabecalho-principal">
+                    <h1 class="cabecalho-titulo">AluraConf</h1>
+                    <h2 class="cabecalho-subtitulo">30Maio|Rio</h2>
+                </section>
+                <section class="cabecalho-inscrever">
+                    <a href="#secao-formulario" class="botao">Inscreva-se</a>
+                </section>
             </div>
-        </div>
-    </section>
+        </header>
 
-    <section id="panel-speakers" class="panel panel-speakers" >
-        <div class="container">
-            <div class="about-speakers">
-                <h2 class="title">PALESTRANTES</h2>
-                <h3 class="subtitle">Aprenda com palestrantes que são referência no mercado</h3>
+        <section id="secao-chamada" class="secao-chamada">
+            <div class="container">
+                <h2 class="chamada-titulo">Muito conteúdo: do frontend ao backend</h2>
+                <h3 class="chamada-subtitulo">30 de Maio de 2017 - na Cidade Maravilhosa</h3>
+
+                <div class="chamada-descricao">
+                    <p>
+                        Com a AluraConf abordaremos o que há de novidade e conhecimentos essenciais a um desenvolver mobile.
+                    </p>
+                    <p>
+                        É uma grande chance de ficar por dentro dos assuntos de Android, iOS, Web mobile, desenvolvimento híbrido, UX, além da parte
+                        backend com Rest, Microservices, e BigData. O desenvolvedor atualizado vai estar aqui.
+                    </p>
+                </div>
             </div>
+        </section>
 
-            <ul class="speakers">
-
-                <li class="speaker">
-                    <figure class="speaker-portrait">
-                        <img class="speaker-image" src="img/palestrantes/placeholder.jpeg" alt="Foto do palestrante">
-                        <figcaption class="speaker-name">Flávio Almeida</figcaption>
-                        <p class="speaker-bio">Desenvolvedor e instrutor da Caelum</p>
-                    </figure>
-                    <p class="speaker-speach">To be or not to be MEAN</p>
-                </li>
-
-                <li class="speaker">
-                    <figure class="speaker-portrait">
-                        <img class="speaker-image" src="img/palestrantes/placeholder.jpeg" alt="Foto do palestrante">
-                        <figcaption class="speaker-name">Flávio Almeida</figcaption>
-                        <p class="speaker-bio">Desenvolvedor e instrutor da Caelum</p>
-                    </figure>
-                    <p class="speaker-speach">To be or not to be MEANTo be or not to be MEANTo be or not to be MEANTo be or not to be MEANTo be or not to be MEANTo be or not to be MEANTo be or not to be MEANTo be or not to be MEAN</p>
-                </li>
-
-                <li class="speaker">
-                    <figure class="speaker-portrait">
-                        <img class="speaker-image" src="img/palestrantes/placeholder.jpeg" alt="Foto do palestrante">
-                        <figcaption class="speaker-name">Flávio Almeida</figcaption>
-                        <p class="speaker-bio">Desenvolvedor e instrutor da Caelum</p>
-                    </figure>
-                    <p class="speaker-speach">To be or not to be MEAN</p>
-                </li>
-
-                <li class="speaker">
-                    <figure class="speaker-portrait">
-                        <img class="speaker-image" src="img/palestrantes/placeholder.jpeg" alt="Foto do palestrante">
-                        <figcaption class="speaker-name">Flávio Almeida</figcaption>
-                        <p class="speaker-bio">Desenvolvedor e instrutor da Caelum</p>
-                    </figure>
-                    <p class="speaker-speach">To be or not to be MEAN</p>
-                </li>
-
-                <li class="speaker">
-                    <figure class="speaker-portrait">
-                        <img class="speaker-image" src="img/palestrantes/placeholder.jpeg" alt="Foto do palestrante">
-                        <figcaption class="speaker-name">Flávio Almeida</figcaption>
-                        <p class="speaker-bio">Desenvolvedor e instrutor da Caelum</p>
-                    </figure>
-                    <p class="speaker-speach">To be or not to be MEAN</p>
-                </li>
-
-                <li class="speaker">
-                    <figure class="speaker-portrait">
-                        <img class="speaker-image" src="img/palestrantes/placeholder.jpeg" alt="Foto do palestrante">
-                        <figcaption class="speaker-name">Flávio Almeida</figcaption>
-                        <p class="speaker-bio">Desenvolvedor e instrutor da Caelum</p>
-                    </figure>
-                    <p class="speaker-speach">To be or not to be MEAN</p>
-                </li>
-            </ul>
-        </div>
-    </section>
-
-    <section id="panel-form" class="panel-form">
-        <div class="container">
-            <h2 class="title">Seus dados</h2>
-            <form>
-                <div class="field">
-                    <label>Nome</label>
-                    <input class="field-input">
+        <section id="secao-palestrantes" class="secao-palestrantes" >
+            <div class="container">
+                <div class="palestrantes">
+                    <h2 class="palestrantes-titulo">PALESTRANTES</h2>
+                    <h3 class="palestrantes-subtitulo">Aprenda com palestrantes que são referência no mercado</h3>
                 </div>
-                <div class="field">
-                    <label>E-mail</label>
-                    <input class="field-input"> 
-                </div>
-                <div class="button-place">
-                    <button class="button">REALIZAR INSCRIÇÃO</button>
-                </div>
-            </form>
-        </div>
-    </section>
-    <script src="js/jquery.js"></script>
-    <script src="js/index.js"></script>
-</body>
+
+                <ul class="palestrantes-principal">
+
+                    <li class="palestrante">
+                        <figure class="palestrante-perfil">
+                            <img class="palestrante-imagem" src="img/palestrantes/placeholder.jpeg" alt="Foto do palestrante">
+                            <figcaption class="palestrante-nome">Flávio Almeida</figcaption>
+                            <p class="palestrante-cargo">Desenvolvedor e instrutor da Caelum</p>
+                        </figure>
+                        <p class="palestrante-curso">To be or not to be MEAN</p>
+                    </li>
+
+                    <li class="palestrante">
+                        <figure class="palestrante-perfil">
+                            <img class="palestrante-imagem" src="img/palestrantes/placeholder.jpeg" alt="Foto do palestrante">
+                            <figcaption class="palestrante-nome">Flávio Almeida</figcaption>
+                            <p class="palestrante-cargo">Desenvolvedor e instrutor da Caelum</p>
+                        </figure>
+                        <p class="palestrante-curso">To be or not to be MEAN</p>
+                    </li>
+
+                    <li class="palestrante">
+                        <figure class="palestrante-perfil">
+                            <img class="palestrante-imagem" src="img/palestrantes/placeholder.jpeg" alt="Foto do palestrante">
+                            <figcaption class="palestrante-nome">Flávio Almeida</figcaption>
+                            <p class="palestrante-cargo">Desenvolvedor e instrutor da Caelum</p>
+                        </figure>
+                        <p class="palestrante-curso">To be or not to be MEAN</p>
+                    </li>
+
+                    <li class="palestrante">
+                        <figure class="palestrante-perfil">
+                            <img class="palestrante-imagem" src="img/palestrantes/placeholder.jpeg" alt="Foto do palestrante">
+                            <figcaption class="palestrante-nome">Flávio Almeida</figcaption>
+                            <p class="palestrante-cargo">Desenvolvedor e instrutor da Caelum</p>
+                        </figure>
+                        <p class="palestrante-curso">To be or not to be MEAN</p>
+                    </li>
+
+                    <li class="palestrante">
+                        <figure class="palestrante-perfil">
+                            <img class="palestrante-imagem" src="img/palestrantes/placeholder.jpeg" alt="Foto do palestrante">
+                            <figcaption class="palestrante-nome">Flávio Almeida</figcaption>
+                            <p class="palestrante-cargo">Desenvolvedor e instrutor da Caelum</p>
+                        </figure>
+                        <p class="palestrante-curso">To be or not to be MEAN</p>
+                    </li>
+
+                    <li class="palestrante">
+                        <figure class="palestrante-perfil">
+                            <img class="palestrante-imagem" src="img/palestrantes/placeholder.jpeg" alt="Foto do palestrante">
+                            <figcaption class="palestrante-nome">Flávio Almeida</figcaption>
+                            <p class="palestrante-cargo">Desenvolvedor e instrutor da Caelum</p>
+                        </figure>
+                        <p class="palestrante-curso">To be or not to be MEAN</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section id="secao-formulario" class="secao-formulario">
+            <div class="container">
+                <h2 class="formulario-titulo">Seus dados</h2>
+                <form>
+                    <div class="formulario-item">
+                        <label for="nome">Nome</label><br>
+                        <input id="nome" class="formulario-input">
+                    </div>
+                    <div class="formulario-item">
+                        <label for="email">E-mail</label><br>
+                        <input id="email" class="formulario-input"> 
+                    </div>
+                    <div class="formulario-botao">
+                        <button class="botao">Realizar inscrição</button>
+                    </div>
+                </form>
+            </div>
+        </section>
+
+        <script src="js/jquery.js"></script>
+        <script src="js/index.js"></script>
+    </body>
 </html>
